<resources>
    <string name="app_name">Smart Pest Scouting</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="hybrid_map">No of Trees</string>
    <string name="satellite_map">Settings</string>
    <string name="terrain_map">Logout</string>
    <string name="normal_map">Users</string>
</resources>