<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sad"
    android:fitsSystemWindows="true"
    tools:context="com.example.pest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#d89917"
                android:hint="@string/email"
                app:hintTextColor="#d89917"
                android:textColor="#d89917"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            android:background="@drawable/buttonshape"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#d89917" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:textColor="#d89917"
            android:background="@drawable/buttonshape" />

        <Button
            android:id="@+id/buttonadmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="I'M ADMIN"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:drawableLeft="@drawable/ic_person_add_black_24dp"
            android:textColor="#d89917"
            android:background="@drawable/buttonshape" />

        <TextView
            android:id="@+id/textViewCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="22sp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal" />


    </LinearLayout>
</ScrollView>